feat: Enhance context awareness and intent classification in AI interactions
- Implemented `classify_user_intent()` method for improved intent detection.
- Updated image generation and search request handling to consider conversation history.
- Renamed IP Adapter references to FLUX Redux for clarity and consistency.
- Enhanced user experience by allowing implicit confirmations and follow-up recognition.
- Updated dependencies in `requirements.txt` for FLUX Redux support.
- Improved logging for intent detection and decision-making processes.
- Added comprehensive testing guide and context-aware upgrade documentation.

--- a/demo/index.html
+++ b/demo/index.html
@@ -146,7 +146,7 @@
                             <span class="optional-badge">Optional</span>
                         </div>
                         <label class="toggle-switch">
-                            <input type="checkbox" id="useIpAdapterToggleInput" onchange="toggleIpAdapter(this.checked)">
+                            <input type="checkbox" id="useIpAdapterToggleInput" onchange="toggleIpAdapter(this.checked)" title="Use FLUX Redux for image-based style transfer">
                             <span class="toggle-slider"></span>
                         </label>
                     </div>
